--- a/package.json
+++ b/package.json
@@ -6,17 +6,40 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-native": "0.71.3"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@react-native|react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ],
+    "setupFilesAfterEnv": [
+      "./__mocks__/globalMock.js"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.27",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/react": "~18.0.14",
+    "babel-loader": "^8.3.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
   },
   "private": true
