--- a/package.json
+++ b/package.json
@@ -1,45 +1,55 @@
 {
   "name": "storybook",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --config jest.config.js",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 7007",
     "build-storybook": "build-storybook"
   },
+  "engines": {
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.19.1"
+  },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo-google-fonts/nunito": "^0.2.3",
     "expo": "~48.0.6",
+    "expo-font": "~11.1.1",
+    "expo-modules-core": "^1.2.5",
     "expo-status-bar": "~1.4.4",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.3"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?@react-native|react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
-    ],
-    "setupFilesAfterEnv": [
-      "./__mocks__/globalMock.js"
-    ]
+    "react-art": "^18.2.0",
+    "react-native": "0.71.3",
+    "react-native-web": "^0.18.12",
+    "react-test-renderer": "^18.2.0",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@storybook/addon-actions": "^5.3.21",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-jest": "^6.5.16",
     "@storybook/addon-knobs": "^5.3.21",
-    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-links": "^6.5.16",
     "@storybook/addon-ondevice-actions": "^5.3.23",
     "@storybook/addon-ondevice-knobs": "^5.3.26",
     "@storybook/react-native": "^5.3.27",
     "@storybook/react-native-server": "^5.3.23",
+    "@testing-library/react-native": "^12.0.0",
     "@types/react": "~18.0.14",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-loader": "^8.3.0",
     "react-dom": "^18.2.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "private": true
