--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
         "@testing-library/react-native": "^12.0.0",
         "@types/react": "~18.0.14",
         "@types/react-test-renderer": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.56.0",
+        "@typescript-eslint/parser": "^5.56.0",
         "babel-loader": "^8.3.0",
+        "eslint": "^8.36.0",
+        "eslint-config-universe": "^11.2.0",
+        "prettier": "^2.8.6",
         "react-dom": "^18.2.0",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
