--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@expo-google-fonts/montserrat": "^0.2.3",
         "@expo-google-fonts/nunito": "^0.2.3",
+        "@expo/vector-icons": "^13.0.0",
         "expo": "~48.0.6",
         "expo-font": "~11.1.1",
         "expo-modules-core": "^1.2.5",
@@ -28,6 +29,7 @@
         "react": "18.2.0",
         "react-art": "^18.2.0",
         "react-native": "0.71.3",
+        "react-native-flip-card": "^3.5.7",
         "react-native-web": "^0.18.12",
         "react-test-renderer": "^18.2.0"
     },
@@ -46,6 +48,7 @@
         "@testing-library/jest-native": "^5.4.2",
         "@testing-library/react-native": "^12.0.0",
         "@types/react": "~18.0.14",
+        "@types/react-native-flip-card": "^3.5.2",
         "@types/react-test-renderer": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
