--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
         "@expo/vector-icons": "^13.0.0",
         "expo": "~48.0.6",
         "expo-font": "~11.1.1",
-        "expo-modules-core": "^1.2.5",
+        "expo-modules-core": "~1.2.6",
         "expo-splash-screen": "~0.18.1",
         "expo-status-bar": "~1.4.4",
         "jest": "^29.2.1",
         "jest-expo": "^48.0.2",
         "react": "18.2.0",
         "react-art": "^18.2.0",
-        "react-native": "0.71.3",
+        "react-native": "0.71.6",
         "react-native-flip-card": "^3.5.7",
         "react-native-web": "^0.18.12",
         "react-test-renderer": "^18.2.0"
