--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@testing-library/react-native": "^12.0.0",
         "@types/react": "~18.0.14",
         "@types/react-native-flip-card": "^3.5.2",
+        "@types/react-native-table-component": "^1.2.4",
         "@types/react-test-renderer": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
