--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
     "name": "osmosys-ui",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "scripts": {
         "test": "jest",
         "build": "yarn build:esm",
-        "build:esm": "tsc",
+        "build:esm": "rd /s /q \"dist\" && tsc",
         "prepare": "npm run build",
-        "prepublishOnly": "npm run prettier && npm run lint",
-        "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-        "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\""
+        "prepublishOnly": "npm run prettier",
+        "prettier": "prettier --write \"src/**/*.{ts,tsx}\""
     },
     "engines": {
         "npm": "please-use-yarn",
         "yarn": ">= 1.19.1"
     },
+    "eslintConfig": {
+        "ignorePatterns": [
+            "dist",
+            "node_modules"
+        ]
+    },
     "files": [
         "dist",
+        "src",
         "README.md"
     ],
     "license": "MIT",
@@ -73,6 +79,5 @@
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
-    },
-    "private": true
+    }
 }
