--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,18 @@
         "jsx": "react-native",
         "outDir": "dist",
         "noEmit": false,
-        "declaration": true
+        "declaration": true,
+        "module": "esnext",
+        "lib": ["dom", "esnext"],
+        "importHelpers": true,
+        "rootDir": ".",
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     }
 }
