--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
         "type": "git",
         "url": "https://github.com/nicofishman/Osmosys-UI.git"
     },
-    "main": "./dist/cjs/index.js",
-    "module": "./dist/esm/index.js",
-    "types": "./dist/esm/index.d.ts",
+    "main": "./dist/src/index.js",
+    "types": "./dist/src/index.d.ts",
     "dependencies": {
         "@expo-google-fonts/montserrat": "^0.2.3",
         "@expo-google-fonts/nunito": "^0.2.3",
