--- a/package.json
+++ b/package.json
@@ -35,39 +35,23 @@
         "@expo-google-fonts/montserrat": "^0.2.3",
         "@expo-google-fonts/nunito": "^0.2.3",
         "@expo/vector-icons": "^13.0.0",
-        "@rollup/plugin-typescript": "^11.1.0",
         "expo": "~48.0.6",
         "expo-font": "~11.1.1",
         "expo-modules-core": "~1.2.6",
         "expo-splash-screen": "~0.18.1",
         "expo-status-bar": "~1.4.4",
-        "jest": "^29.2.1",
-        "jest-expo": "^48.0.2",
         "react": "18.2.0",
         "react-art": "^18.2.0",
         "react-native": "0.71.6",
         "react-native-flip-card": "^3.5.7",
-        "react-native-web": "^0.18.12",
-        "react-test-renderer": "^18.2.0"
+        "react-native-web": "^0.18.12"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/preset-typescript": "^7.21.0",
-        "@storybook/addon-actions": "^6.5.16",
-        "@storybook/addon-jest": "^6.5.16",
-        "@storybook/addon-knobs": "^5.3.21",
-        "@storybook/addon-links": "^6.5.16",
-        "@storybook/addon-ondevice-actions": "^5.3.23",
-        "@storybook/addon-ondevice-knobs": "^5.3.26",
-        "@storybook/react-native": "^5.3.27",
-        "@storybook/react-native-server": "^5.3.23",
-        "@testing-library/jest-native": "^5.4.2",
-        "@testing-library/react-native": "^12.0.0",
         "@types/react": "~18.0.14",
         "@types/react-native-flip-card": "^3.5.2",
-        "@types/react-native-table-component": "^1.2.4",
-        "@types/react-test-renderer": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
         "@typescript-eslint/parser": "^5.56.0",
         "babel-loader": "^8.3.0",
@@ -75,7 +59,6 @@
         "eslint-config-universe": "^11.2.0",
         "prettier": "^2.8.6",
         "react-dom": "^18.2.0",
-        "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     }
