--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "osmosys-ui",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "scripts": {
         "test": "jest",
         "build": "yarn build:esm",
@@ -35,16 +35,15 @@
         "@expo-google-fonts/montserrat": "^0.2.3",
         "@expo-google-fonts/nunito": "^0.2.3",
         "@expo/vector-icons": "^13.0.0",
-        "expo": "~48.0.6",
+        "expo": "47.0.0",
         "expo-font": "~11.1.1",
         "expo-modules-core": "~1.2.6",
         "expo-splash-screen": "~0.18.1",
         "expo-status-bar": "~1.4.4",
         "react": "18.2.0",
         "react-art": "^18.2.0",
-        "react-native": "0.71.6",
-        "react-native-flip-card": "^3.5.7",
-        "react-native-web": "^0.18.12"
+        "react-native": "0.70.5",
+        "react-native-flip-card": "^3.5.7"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
