--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
-    }
+    },
+    "exclude": ["node_modules", "babel.config.js", "dist"]
 }
